@@ -47,6 +47,8 @@
           (thanks to Denis Kasak).
 - TW-1615 Japanese translation for Taskwarrior(150513) (thanks to ribbon).
 - TW-1617 Can't search for multi-word project (thanks to Audrey Easterday).
+- TW-1622 Duration UDA can't take an algebraic expression (thanks to Jeremy John
+          Reeder).
 - TW-1626 Wrong wait date (thanks to Andrea Rizzi).
 - TW-1632 Japanese translation for Taskwarrior(150713) (thanks to ribbon).
 - Prevent potential task duplication during import for non-pending tasks.
